--- a/B-app/src/app/components/cart/cart.component.css
+++ b/B-app/src/app/components/cart/cart.component.css
@@ -59,6 +59,7 @@ cursor: pointer;
   /* width: 10%; */
   height: 80px;
   border-radius: 24px;
+  margin: 0%;
   /* background-image: url(../images/Home/Image\ \(61\).png); */
   background-position: center center;
   background-size: cover;
