--- a/B-app/src/app/components/cart/cart.component.html
+++ b/B-app/src/app/components/cart/cart.component.html
@@ -25,7 +25,7 @@
             <tr *ngFor="let product of products" [title]="product.product.name">
               
             <td>
-              <div class="row d-flex ">
+              <div class=" d-flex ">
                 <div class="cart-img">
                   <img class="h-100 " [src]="product.product.imageUrl">
                   <h5 class=" ">{{product.product.name | trim}} 
