--- a/B-app/src/app/components/categories/categories.component.html
+++ b/B-app/src/app/components/categories/categories.component.html
@@ -7,7 +7,7 @@
                         <div class="card catigories-item" *ngFor="let category of categories" >
                          
                         <div  [routerLink]="['/subCategory/',category.id]">
-                            <img [src]="category.imageUrl" class="card-img-top" alt="...">
+                            <img [src]="category.imageUrl" class="card-img-top " alt="...">
                             <div class="card-body">
                                 <h4>{{category.name}}</h4>
                             </div>
@@ -15,7 +15,7 @@
                          
                         </div>
                     <div class="card catigories-item ">
-     <img src="assets/images/8png.jpg" class=" allProductsCategory " alt="..." routerLink="/products">
+     <img src="../../../assets/images/allProducts2.jpg" class=" allProductsCategory " alt="..." routerLink="/products">
                      <div class="card-body">
                       <h4>All products</h4>
                   </div>
