--- a/B-app/src/app/components/home/home.component.html
+++ b/B-app/src/app/components/home/home.component.html
@@ -1,19 +1,32 @@
 <section class="sectionMain">
+  <div class="backG">
+    <div class="">
+      <h1 class="titleMain "> Find the best Business solutions <i class="fa-regular fa-lightbulb align-items-center"></i></h1>
+              </div>
+              <div class="d-flex justify-content-around">
+                
+            <div class="containerWelcome p-4 "> 
+                <h6 class=""> Welcome to our Business Consulting Hub,
+                   where we offer expert guidance and tailored solutions for business owners.
+                   Our platform includes a comprehensive range of consulting services aimed at driving growth
+                   and efficiency. Additionally, our e-commerce section allows businesses to stock essential
+                   products conveniently. We provide exclusive discount codes on our services to make top-tier
+                   consulting more affordable. Join us today to transform your business!</h6>
+                  </div>
+                <img src="../../../assets/images/homeimg1.jpeg" class="w-50  homeImg">
+                
+              </div>
+  </div>
   <div  class="container">
-    <div class="second">
-        <div class="imageupper">
-
-        </div>
-        <div class="title">
-            <h1>Find the best business solutions 
-            </h1>
-        </div>
+    <div class="">
+      
+  
         <!-- <p class="">Welcome to our Business Consulting Hub, a comprehensive platform designed to cater to all your business needs. Once you log in, you'll have access to a wide array of services tailored to enhance your business operations. Navigate through our meticulously curated list of services, each aimed at addressing specific aspects of your business where you might seek professional assistance.
 
           Upon selecting a service, you'll be presented with a selection of reputable companies specialized in that field. Choose the company that best fits your requirements and conveniently book a consultation session with their experts. Our platform ensures a seamless process, making it easier for you to connect with the right professionals.
           
           In addition to consulting services, our platform also functions as an e-commerce website. Explore and purchase high-quality goods across various categories, handpicked to support your business growth. Enjoy the dual benefits of expert consultation and premium product shopping, all in one place.</p> -->
-        <div class="third">
+        <div class="">
 
             <!-- <div class="firstinput">
                 <input  class="searchinput" type="text" placeholder="Company adress">
