--- a/B-app/src/app/components/services/services.component.html
+++ b/B-app/src/app/components/services/services.component.html
@@ -1,15 +1,16 @@
-<div class="row g-3 position-relative">
+<div class="row g-3 position-relative mt-5">
   <div class="col-md-3" *ngFor="let one of all" [title]="one.description">
    <div [routerLink]="['/serviceDetails/',one.id]">
-    <div class="product p-2">
+    <div class="product p-2 bg-light cardd">
         <div class="align-content-center  ">
-            <span class="d-flex justify-content-center"><b>{{one.name}}</b></span> <br>
-            <span class="d-flex justify-content-center">{{one.description | biggerTrim}} 
-                <span *ngIf="one.description.split(' ').length >4">...</span>
-            </span> <br>
+            <span class="d-flex justify-content-center m-2" [title]="one.name"><b>{{one.name | trim1}}</b> <span *ngIf="one.name.split(' ').length >1">...</span> </span>
+            <span class="d-flex justify-content-center">{{one.description | biggerTrim}} ...
+                <!-- <span *ngIf="one.description.split(' ').length >8">...</span> -->
+            </span> 
+            <!-- <br> -->
         <span class="d-flex justify-content-center align-items-center ">
             <!-- <img src="../../../assets/images/2png.jpg"> -->
-            <img [src]="one.imageUrl">
+            <img [src]="one.imageUrl" class="w-100  image m-2">
         </span>
 
         </div>
