--- a/B-app/src/app/components/all-orders/all-orders.component.html
+++ b/B-app/src/app/components/all-orders/all-orders.component.html
@@ -17,7 +17,7 @@
             <div class="Centerfelnos"   [routerLink]="['/orderDetails/',order.id]">
                 <p class="text-main centerr">Order number : <b class="text-black">{{order.id}}</b> </p> 
             <!-- <p>Click here to show Order details</p> -->
-             <button class="btnn">Show more </button>
+             <button class="btnn">Show order details</button>
             </div>
           <!-- </div> -->
        <!-- <div class="row align-items-center d-flex  " [title]="orderItem.product.name"> -->
