--- a/B-app/src/app/components/home/home.component.css
+++ b/B-app/src/app/components/home/home.component.css
@@ -5,6 +5,37 @@
     width: 100%;
     background-position: center center;
 } */
+ .backG{
+    background-image: url("../../../assets/images/purpleBG.jpg");
+    background-repeat:no-repeat ;
+    background-size: cover;
+    margin-top: 30px;
+    border-radius: 20px;
+    height: 500px;
+    padding: 10px;
+ }
+ .titleMain{
+    margin-left: 250px;
+    margin-bottom: 30px;
+    
+ }
+.homeImg{
+    border-radius:24px ;
+    /* height: 100%; */
+    height: 400px;
+    width: 60%;
+    margin-right: 20px;
+}
+.containerWelcome{
+    
+    margin-right: 40px;
+    height: 300px;
+    background-repeat:no-repeat ;
+    background-size: cover;
+    /* height: 100%; */
+    border-radius: 24px;
+    background-image: url("../../../assets/images/purpleBG.jpg");
+  }
 .accor1 .accordion .accordion-item .accordion-body{
     display: flex;
     width: 100%;
