--- a/B-app/src/app/components/sub-category-by-id/sub-category-by-id.component.css
+++ b/B-app/src/app/components/sub-category-by-id/sub-category-by-id.component.css
@@ -101,8 +101,9 @@
 }
 
 .card-img, .card-img-bottom, .card-img-top {
-    width: 60% !important;
-    height: 80% !important;
+    width: 65% !important;
+    /* height: 80% !important; */
+    height: 150px;
     margin: auto;
     border-top-left-radius: 20px !important;
     border-top-right-radius: 20px !important;
