--- a/B-app/src/app/components/book-service-form/book-service-form.component.html
+++ b/B-app/src/app/components/book-service-form/book-service-form.component.html
@@ -1,7 +1,9 @@
 <!-- <p>book-service-form works!</p> -->
 <div class="d-flex justify-content-center  recit">
     <div>
-        <p class="d-flex justify-content-center mt-4 h6 clickmsg text-main">Click on Generate code and Enjoy the dicount  <i class="fa-solid fa-arrow-down align-items-center m-1"></i></p>
+        <p class="d-flex justify-content-center mt-4 h6 clickmsg text-main">Click on Generate code and Enjoy the dicount  <i class="fa-solid fa-arrow-down align-items-center m-1"></i>
+            <img src="../../../assets/images/voucher.png" style="width: 40px; height: 40px;">
+        </p>
         <form  (ngSubmit)="handelBookingForm(providerId,code)" [formGroup]="BookingForm" class="h" *ngIf="isBooked; else booked">
             <!-- <label for="email">email</label> -->
             <!-- <h4 >Sign Up </h4> -->
@@ -29,7 +31,14 @@
             <div *ngIf="BookingForm.get('code')?.errors && (BookingForm.get('code')?.touched) || (BookingForm.get('code')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
             <p *ngIf="BookingForm.get('code')?.getError('required')"> Discount Code is Required</p>
             </div>
-            <a (click)="generateDiscountCode()" class="d-flex discount mt-2 w-100"> Generate code</a>
+          <div>
+            <a (click)="generateDiscountCode()" class="d-flex discount mt-2 w-100 align-items-center"> 
+                <img src="../../../assets/images/promo-code.png" style="width: 20px; height: 20px;">
+                 Generate code 
+                 <img src="../../../assets/images/promo-code.png" style="width: 20px; height: 20px;">
+
+            </a>
+          </div> 
             <button  [disabled]="BookingForm.invalid"class="btn mt-4 d-flex justify-content-center align-items-center " (click)="handelBookingForm(providerId,code)">Submit
                 <!-- <i *ngIf="isLoading" class="fa fa-spin fa-spinner"></i> -->
             </button>
