--- a/B-app/src/app/components/navbar-auth/navbar-auth.component.css
+++ b/B-app/src/app/components/navbar-auth/navbar-auth.component.css
@@ -1,5 +1,5 @@
 .esm {
-    color: #DCAEFD ;
+    color:blueviolet ;
 }
 .esm-gded{
     /* color: blueviolet; */
@@ -8,5 +8,5 @@
 .handshake{
     width: 4%;
     height: 4%;
-    border-radius: 50%;
+    /* border-radius: 50%; */
  }
