--- a/B-app/src/app/components/navbar-blank/navbar-blank.component.html
+++ b/B-app/src/app/components/navbar-blank/navbar-blank.component.html
@@ -2,7 +2,7 @@
     class="navbar navbar-expand-sm navbar-light bg-light fixed-top "
 >
     <div class="container"  >
-        <img src="../../../assets/images/logo1.png" class="handshake g-3 imageObacity ">
+        <img src="../../../assets/images/partnership.png" class="handshake g-3 imageObacity ">
         <h3 class="esm" routerLink="/home">BCHub  </h3>
         <div class="collapse navbar-collapse " id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbarGeded">
