--- a/B-app/src/app/components/navbar-vendor/navbar-vendor.component.html
+++ b/B-app/src/app/components/navbar-vendor/navbar-vendor.component.html
@@ -6,9 +6,9 @@
             <img src="./assets/images/freshcart-logo.svg">
         </a> -->
         <!-- <h4 class="esm "> Esm el mashro3 el gamed</h4> -->
-        <img src="../../../assets/images/online-agreement logo.avif" class="handshake g-3 ">
+        <img src="../../../assets/images/partnership.png" class="handshake g-3 ">
 
-        <h3 class="esm-gded">Business Consulting Hub </h3>
+        <h3 class="esm">BCHub </h3>
         <button
             class="navbar-toggler d-lg-none"
             type="button"
