--- a/B-app/src/app/components/vendor-login/vendor-login.component.html
+++ b/B-app/src/app/components/vendor-login/vendor-login.component.html
@@ -1,21 +1,21 @@
 
 <div class="d-flex justify-content-center ">
     <form  (ngSubmit)="handelLoginForm()" [formGroup]="loginForm" class="h">
-        <h4 >Login as a Vendor </h4>
-        <input type="text" class=" b d-flex form-control " id="companyName" formControlName="companyName" placeholder="Company's Name :">
+        <h4 >Login as a Company </h4>
+        <input type="text" class=" b d-flex form-control " id="companyName" formControlName="companyName" placeholder="Company's Name ">
         <div *ngIf="loginForm.get('companyName')?.errors && (loginForm.get('companyName')?.touched) || (loginForm.get('companyName')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
             <p *ngIf="loginForm.get('companyName')?.getError('required')" class=""> The Company name is required</p>
         </div>
 
-        <input type="email" class=" b d-flex form-control mt-3  " id="email" formControlName="email" placeholder="Enter Your E-mail">
+        <input type="email" class=" b d-flex form-control mt-3  " id="email" formControlName="email" placeholder="Enter your e-mail">
         <div *ngIf="loginForm.get('email')?.errors && (loginForm.get('email')?.touched) || (loginForm.get('email')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
             <p *ngIf="loginForm.get('email')?.getError('required')" class=""> Email is required</p>
             <p *ngIf="loginForm.get('email')?.getError('email')">Invalid Email</p>
         </div>
 
-        <input type="password" class="d-flex b mt-3 form-control " id="password" formControlName="password" placeholder="Enter Your Password">
+        <input type="password" class="d-flex b mt-3 form-control " id="password" formControlName="password" placeholder="Enter your password">
         <div *ngIf="loginForm.get('password')?.errors && (loginForm.get('password')?.touched) || (loginForm.get('password')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-        <p *ngIf="loginForm.get('password')?.getError('required')"> Password is Required</p>
+        <p *ngIf="loginForm.get('password')?.getError('required')"> Password is required</p>
 
         </div>
         <div class="alert alert-danger d-flex b mt-3 form-control" *ngIf="errorMsg">
