--- a/B-app/src/app/components/categories/categories.component.html
+++ b/B-app/src/app/components/categories/categories.component.html
@@ -9,7 +9,7 @@
                         <div  [routerLink]="['/subCategory/',category.id]">
                             <img [src]="category.imageUrl" class="card-img-top " alt="...">
                             <div class="card-body">
-                                <h4>{{category.name}}</h4>
+                                <h4 class="mt-2">{{category.name}}</h4>
                             </div>
                         </div>
                          
@@ -17,7 +17,7 @@
                     <div class="card catigories-item ">
      <img src="../../../assets/images/allProducts2.jpg" class=" allProductsCategory " alt="..." routerLink="/products">
                      <div class="card-body">
-                      <h4>All products</h4>
+                      <h4 class="mt-2">All products</h4>
                   </div>
                     </div>
                 </div>
