--- a/B-app/src/app/components/categories/categories.component.css
+++ b/B-app/src/app/components/categories/categories.component.css
@@ -2,20 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 .allProducts{
     cursor: pointer;
 }
+.Categories{
+    margin: 0%;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
+    /* background-image: url("../../../assets/images/purpleBG.jpg");
+    background-repeat:no-repeat ;
+   background-size: cover; */
+    
+}
 .Categories .content{
     display: flex;
     margin-top: 50px;
-    /* justify-content: space-around;
-    flex-wrap: wrap; */
+    /* justify-content: space-around; */
+    /* flex-wrap: wrap; */
     
 }
-.browse{
+/* .browse{
     width: 20%;
-    /* box-shadow: var(--shadow); */
 }
 .browse-title{
     margin-left:10px ;
@@ -24,13 +34,13 @@
     font-family: "Roboto";
     font-weight: 700;
     line-height: 28px;
-}
-.dropdown{
+} */
+/* .dropdown{
     margin-bottom: 12px;
 }
 
 .accordion{
-    /* outline: 10px red solid !important; */
+  
     border: none !important;
     --bs-accordion-btn-focus-box-shadow:  none  !important;
     
@@ -50,11 +60,12 @@
 .accor1 .accordion .accordion-item:focus{
     box-shadow: none  !important ;
 } 
-
+ */
 
 .Categories .content .categories-items{
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+    justify-content: space-between;
     /* align-items: center; */
     flex-wrap: wrap;
     margin: auto;
@@ -74,7 +85,7 @@
     /* box-shadow: var(--shadow); */
     border: none !important;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
 
 }
 .card-body{
@@ -101,10 +112,12 @@
 }
 
 .card-img, .card-img-bottom, .card-img-top {
-    width: 65% !important;
+    width: 100% !important;
     /* height: 80% !important; */
-    height: 150px;
+    /* height: 150px; */
+    height: 195px;
     margin: auto;
+    /* margin: 50px; */
     border-top-left-radius: 20px !important;
     border-top-right-radius: 20px !important;
     border-end-end-radius: 20px !important;
@@ -114,9 +127,10 @@
 .allProductsCategory{
     /* width: 60% !important;
     height: 60% !important; */
-    width: 65% !important;
+    width: 100% !important;
+  height: 100%;
     /* height: 80% !important; */
-    height: 150px;
+    /* height: 150px; */
     margin: auto;
     border-top-left-radius: 20px !important;
     border-top-right-radius: 20px !important;
