--- a/B-app/src/app/components/home/home.component.css
+++ b/B-app/src/app/components/home/home.component.css
@@ -1,3 +1,4 @@
+
 /* .sectionMain{
     background-image: url("../../../assets/images/purpleBG.jpg");
     background-repeat: no-repeat;
@@ -5,37 +6,40 @@
     width: 100%;
     background-position: center center;
 } */
- .backG{
+.backG{
     background-image: url("../../../assets/images/purpleBG.jpg");
     background-repeat:no-repeat ;
     background-size: cover;
-    margin-top: 30px;
-    border-radius: 20px;
-    height: 500px;
-    padding: 10px;
- }
- .titleMain{
-    margin-left: 250px;
-    margin-bottom: 30px;
-    
- }
+    /* margin-top: 30px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+}
+.titleMain{
+      margin-bottom: 25px;
+      /* font-size: 75px; */
+      font-size: 60px;
+    font-weight: 600;
+    line-height: 80px;
+}
+.content{
+  width: 50%;
+  padding-top: 30px;
+}
+.content h1{
+  text-align: center;
+}
 .homeImg{
     border-radius:24px ;
-    /* height: 100%; */
     height: 400px;
-    width: 60%;
+    width: 35%;
     margin-right: 20px;
 }
-.containerWelcome{
-    
-    margin-right: 40px;
-    height: 300px;
-    background-repeat:no-repeat ;
-    background-size: cover;
-    /* height: 100%; */
-    border-radius: 24px;
-    background-image: url("../../../assets/images/purpleBG.jpg");
-  }
+.containerWelcome p{
+  font-size: 20px;
+  font-weight: 400;
+}
 .accor1 .accordion .accordion-item .accordion-body{
     display: flex;
     width: 100%;
@@ -53,7 +57,7 @@ h2{
     text-align: center;
 }
 @media (max-width:750px){
-   
+
 }
 .accor1 .accordion .accordion-item .accordion-body .mid{
     border-left: 1px solid #f0f0f0;
@@ -113,7 +117,7 @@ h2{
     border: 1px solid white;
     box-sizing: border-box;
     border-radius: 24px;
-    background-color:var(--main-color);
+    background-color:#8a2be4;
     color: white;
     font-size: 14px;
     font-weight: 600;
@@ -149,7 +153,7 @@ h2{
     font-family: "Montserrat";
     font-weight: bold;
     line-height: 52px;
-    
+
 }
 .firstbutt{
     cursor: pointer;
@@ -161,7 +165,7 @@ h2{
   border: 0;
   box-sizing: border-box;
   border-radius: 24px;
-  background-color: #cb9afd;
+  background-color: #8a2be4;
   color: #ffffff;
   font-size: 18px;
   font-family: "Montserrat";
@@ -190,13 +194,13 @@ h2{
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  
+
 }
 
 .title{
     margin-top: 38px;
     width: 55%;
-    
+
     text-align: center;
     margin-left: 90px;
 }
@@ -214,7 +218,7 @@ h2{
     /* justify-content: space-between; */
     /* margin-top: 15px; */
     align-items: start;
-    width: 65%; 
+    width: 65%;
     align-items: center;
     text-align: center;
     margin-left: 200px;
@@ -243,10 +247,10 @@ h2{
 .searchlabel{
     cursor: pointer;
  top: 56000000px;
-  left: 906px; 
+  left: 906px;
  /* width: 92px;
   height: 50px; */
- padding: 10px 22px; 
+ padding: 10px 22px;
   text-align: center;
   margin-left: 11px;
   border: 0;
@@ -287,7 +291,7 @@ h2{
         justify-content: space-between;
         margin-top: 15px;
         padding-bottom: 42px;
-       
+
     }
     .one{
         width: 20%;
@@ -298,7 +302,7 @@ h2{
         font-family: "Montserrat";
         font-weight: bold;
         line-height: 52px;
-        
+
     }
     .firstbutt{
         cursor: pointer;
@@ -317,10 +321,10 @@ h2{
       font-weight: 600;
       line-height: 28px;
       outline: none;
-  
+
     }
     .second{
-    
+
         display: flex;
         flex-wrap: wrap;
         /* justify-content: space-between; */
@@ -329,7 +333,7 @@ h2{
 
         /* width: 65%; */
         padding-bottom:20px ;
-    
+
         }
     .imageupper{
         top: 260px;
@@ -342,14 +346,12 @@ h2{
       background-size: cover;
       background-repeat: no-repeat;
       display: none;
-      
+
     }
-    
+
     .title{
         margin-top: 38px;
         width: 99%;
-     
-        text-align: center;
         /* margin-left: 90px; */
     }
     .title h1{
@@ -359,7 +361,6 @@ h2{
         font-family: "Montserrat";
         font-weight: 600;
         line-height: 92px;
-        text-align: center;
     }
 
     .third{
@@ -367,11 +368,11 @@ h2{
         flex-wrap: wrap;
         justify-content: space-between; */
         align-items:normal;
-        width: 100%; 
+        width: 100%;
         align-items: normal;
         text-align: end;
         /* background-color: aqua; */
-  
+
         margin:auto;
         margin-left: 111px;
     }
@@ -399,7 +400,7 @@ h2{
 
     .searchlabel{
         cursor: pointer;
-     padding: 8px 10px; 
+     padding: 8px 10px;
       text-align: center;
       margin-left: 4px;
       border: 0;
@@ -429,13 +430,13 @@ h2{
         display: none;
     }
     /* .home-service{
-     
+
     } */
     .home-service .home-service-item{
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-    
+
     }
     .home-service .home-service-item img{
         width: 85%;
@@ -488,5 +489,5 @@ order: 20;
     #serv-img2{
         order: 10;
     }
-    
+
 }
