--- a/B-app/src/app/components/products-by-id/products-by-id.component.css
+++ b/B-app/src/app/components/products-by-id/products-by-id.component.css
@@ -60,7 +60,9 @@
     /* padding: 0px 5px; */
     border: 1px solid white;
     border-radius: 24px;
-    background-color: #cb9afd;
+    /* background-color: #cb9afd; */
+    background-color: #8a2be4;
+
     margin: auto;
     color: white;
     font-size: 14px;
@@ -72,4 +74,7 @@
    margin-top: 3px;
     text-align: center;
     color: white;
+}
+.cursor{
+    cursor: pointer;
 }
