--- a/B-app/src/app/components/products-by-id/products-by-id.component.html
+++ b/B-app/src/app/components/products-by-id/products-by-id.component.html
@@ -7,14 +7,14 @@
             [title]="oneProduct.name">
                 <div class="card" >
                    <div>
-                    <img  [src]="oneProduct.imageUrl" class="card-img-top" [routerLink]="['/productDetails/' ,oneProduct.id]"  alt="...">
+                    <img  [src]="oneProduct.imageUrl" class="card-img-top cursor" [routerLink]="['/productDetails/' ,oneProduct.id]"  alt="...">
                    </div>
                     <div class="card-body">
                         <h5 class="card-title d-flex justify-content-center ">{{oneProduct.name | trim}}
                             <span *ngIf="oneProduct.name.split(' ').length >2">...</span>
                         </h5>
                         <p class="d-flex justify-content-center m-1 ">{{oneProduct.price }} EGP</p>
-                        <button class="btn d-flex justify-content-center align-items-center" 
+                        <button class="btn d-flex justify-content-center align-items-center"  style="background-color:  #8a2be4;"
                         (click)="addToCart(oneProduct.id)">Add to Cart 
                          <i class="fa-solid fa-cart-shopping text-light "></i>
                         </button>
