--- a/B-app/src/app/components/products/products.component.css
+++ b/B-app/src/app/components/products/products.component.css
@@ -60,7 +60,8 @@
     /* padding: 0px 5px; */
     border: 1px solid white;
     border-radius: 24px;
-    background-color: #cb9afd;
+    /* background-color: #cb9afd; */
+    background-color: #8a2be4;
     margin: auto;
     color: white;
     font-size: 14px;
