--- a/B-app/src/app/components/requests-home/requests-home.component.html
+++ b/B-app/src/app/components/requests-home/requests-home.component.html
@@ -1,18 +1,8 @@
 <div *ngIf="isEmpty; else notEmpty">
-  <h3 class="d-flex justify-content-center align-items-center mt-2  ">There is No Sessions </h3>
+  <h3 class="d-flex justify-content-center align-items-center mt-5 text-main ">There is No sessions </h3>
   <!-- <img src="../../../assets/images/empty Cart.jpg" class=" d-flex justify-content-center align-items-center w-50 emptycart "> -->
 </div>
 <ng-template #notEmpty>
-<!-- <div class="container">
-    <h3 class="mt-2  ">Welcome , Here are your orders :</h3>
-    <div *ngFor="let session of sessions">
-  <div class="bg-light mt-2 ">
-    <div></div>
-    {{session.userName}}
-    {{session.enrollmentCode}}
-  </div>
-    </div>
-</div> -->
 <div class="bg-light p-5 mt-2 w-75 bigContainer ">
   <div *ngFor="let session of sessions">
     <div class="row align-items-center d-flex justify-content-center  ">       
