--- a/B-app/src/app/components/service-details/service-details.component.css
+++ b/B-app/src/app/components/service-details/service-details.component.css
@@ -18,7 +18,7 @@
 .service  .service-slider .service-item{
     box-shadow:  rgba(145, 158, 171, .2) 0px 2px 4px -1px, rgba(145, 158, 171, .14) 0px 4px 5px 0px, rgba(145, 158, 171, .12) 0px 1px 10px 0px;;
     /* width: 18%;*/
-    height: 180px; 
+    height: 180px;
     width: 23%;
     border-radius: 24px;
     /* background-color: #272b30; */
@@ -37,7 +37,7 @@
     padding-left: 20px;
     padding-top: 15px;
     /* height: 100%; */
-    
+
 }
 
 .service  .service-slider .service-item-content .service-item-btn {
@@ -47,7 +47,7 @@
     padding: 0px 5px;
     border: 1px solid white;
     border-radius: 24px;
-    background-color: #cb9afd;
+    background-color: #8a2be4;
     color: white;
     font-size: 14px;
     font-weight: 500;
@@ -61,16 +61,14 @@ border-bottom: 2px solid  #f0f0f0;
 
         color: #272b30;
         font-size: 24px;
-        font-family: "Montserrat";
         font-weight: 700;
         line-height: 28px;
   margin-bottom: 5px;
-    
+
 }
 .servic-num{
     color: #272b30;
     font-size: 14px;
-    font-family: "Montserrat";
     font-weight: 300;
     line-height: 18px;
     margin-bottom: 5px;
@@ -83,7 +81,7 @@ border-bottom: 2px solid  #f0f0f0;
     align-items: center;
     /* background-color: aqua; */
     padding: 22px;
-  
+
 
 }
 .div-service-img{
@@ -102,7 +100,6 @@ border-bottom: 2px solid  #f0f0f0;
 .Service-Provider-Name{
     color: #272b30;
     font-size: 19px;
-    font-family: "Montserrat";
     line-height: 20px;
     font-weight: 600;
 }
@@ -110,7 +107,6 @@ border-bottom: 2px solid  #f0f0f0;
 .Service-Provider-Role{
     color: #272b30;
     font-size: 14px;
-    font-family: "Montserrat";
     font-weight: 300;
     line-height: 18px;
 }
@@ -121,7 +117,6 @@ border-bottom: 2px solid  #f0f0f0;
 .Service-Provider-location{
     color: #272b30;
     font-size: 16px;
-    font-family: "Montserrat";
     line-height: 20px;
 }
 .service-button{
@@ -137,7 +132,7 @@ border-bottom: 2px solid  #f0f0f0;
     border: 0;
     box-sizing: border-box;
     border-radius: 24px;
-    background-color: #cb9afd;
+    background-color: #8a2be4;
     color: #ffffff;
     font-size: 14px;
     font-family: "Montserrat";
