--- a/B-app/src/app/components/services/services.component.html
+++ b/B-app/src/app/components/services/services.component.html
@@ -1,4 +1,5 @@
 <div class="row g-3 position-relative mt-5">
+    <h3 class="d-flex justify-content-center mt-0 mb-3 fw-bold"> Services</h3>
   <div class="col-md-3" *ngFor="let one of all" [title]="one.description">
    <div [routerLink]="['/serviceDetails/',one.id]">
     <div class="product p-2 bg-light cardd">
