--- a/B-app/src/app/components/requests-home/requests-home.component.html
+++ b/B-app/src/app/components/requests-home/requests-home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isEmpty; else notEmpty">
-  <h3 class="d-flex justify-content-center align-items-center mt-5 text-main ">There is No sessions </h3>
+  <h3 class="d-grid text-main " style="place-items: center; margin-top: 13%;">There is no booked sessions yet </h3>
   <!-- <img src="../../../assets/images/empty Cart.jpg" class=" d-flex justify-content-center align-items-center w-50 emptycart "> -->
 </div>
 <ng-template #notEmpty>
