--- a/B-app/src/app/components/products/products.component.html
+++ b/B-app/src/app/components/products/products.component.html
@@ -7,7 +7,7 @@
                 [title]="oneProduct.name">
                     <div class="card" >
                   <div>                  
-                 <img  [src]="oneProduct.imageUrl" class="card-img-top cursor "[routerLink]="['/productDetails/' ,oneProduct.id]"  alt="...">
+                 <img  [src]="oneProduct.imageUrl" class="card-img-top cursor "[routerLink]="['/productDetails/' ,oneProduct.id]"  alt="oneProduct.name">
                   </div>                    
                       <div class="card-body">
                             <h5 class="card-title d-flex justify-content-center ">{{oneProduct.name | trim}}
