--- a/src/app/components/vendor-login/vendor-login.component.html
+++ b/src/app/components/vendor-login/vendor-login.component.html
@@ -12,10 +12,10 @@
      
               <h3>Company's Login </h3> 
 
-              <!-- <input type="text" class=" b d-flex form-control " id="companyName" formControlName="companyName" placeholder="Company's Name ">
+              <input type="text" class=" b d-flex form-control " id="companyName" formControlName="companyName" placeholder="Company's Name ">
               <div *ngIf="loginForm.get('companyName')?.errors && (loginForm.get('companyName')?.touched) || (loginForm.get('companyName')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
                   <p *ngIf="loginForm.get('companyName')?.getError('required')" class=""> The Company name is required</p>
-              </div> -->
+              </div>
   
               <input type="email" class=" b d-flex form-control mt-3  " id="email" formControlName="email" placeholder="Enter your e-mail">
               <div *ngIf="loginForm.get('email')?.errors && (loginForm.get('email')?.touched) || (loginForm.get('email')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
